pielang/src/snapshots/pielang__test__check_name_(define f (λ (define) 0)).snap
---
source: pielang/src/test.rs
description: (define f (λ (define) 0))
expression: result
---
"OK"
