pielang/src/snapshots/pielang__test__check_name_(define f (λ (sole) 0)).snap
---
source: pielang/src/test.rs
description: (define f (λ (sole) 0))
expression: result
---
"Error: 15:19: sole is not a valid Pie name"
