pielang/src/snapshots/pielang__test__check_name_(define x y z).snap
---
source: pielang/src/test.rs
description: (define x y z)
expression: result
---
"Error: 0:14: define: expect 2 arguments, got 3"
