pielang/src/snapshots/pielang__test__check_name_(define x).snap
---
source: pielang/src/test.rs
description: (define x)
expression: result
---
"Error: 0:10: define: expect 2 arguments, got 1"
