pielang/src/snapshots/pielang__test__check_synthesize_((the (→ Nat Atom Nat) (λ (x y) x)) 1 'a).snap
---
source: pielang/src/test.rs
description: "((the (→ Nat Atom Nat) (λ (x y) x)) 1 'a)"
expression: output
---
type: Nat
expr: 1
