pielang/src/snapshots/pielang__test__check_synthesize_((the (→ Nat Nat Nat) (λ (x y) x)) 0 1).snap
---
source: pielang/src/test.rs
description: ((the (→ Nat Nat Nat) (λ (x y) x)) 0 1)
expression: output
---
type: Nat
expr: 0
