pielang/src/snapshots/pielang__test__check_synthesize_(add1 zero).snap
---
source: pielang/src/test.rs
description: (add1 zero)
expression: output
---
type: Nat
expr: (add1 0)
