pielang/src/snapshots/pielang__test__check_synthesize_(car (the (Pair Atom Nat) (cons 'a 0))).snap
---
source: pielang/src/test.rs
description: "(car (the (Pair Atom Nat) (cons 'a 0)))"
expression: output
---
type: Atom
expr: 'a
