pielang/src/snapshots/pielang__test__check_synthesize_(cdr (the (Pair Atom Nat) (cons 'a 0))).snap
---
source: pielang/src/test.rs
description: "(cdr (the (Pair Atom Nat) (cons 'a 0)))"
expression: output
---
type: Nat
expr: 0
