pielang/src/snapshots/pielang__test__check_synthesize_(quote atom).snap
---
source: pielang/src/test.rs
description: (quote atom)
expression: output
---
type: Atom
expr: 'atom
