pielang/src/snapshots/pielang__test__check_synthesize_(the (-> (Pair Atom Nat) (Pair Atom Nat)) (λ (p) (cons (car p) (cdr p)))).snap
---
source: pielang/src/test.rs
description: (the (-> (Pair Atom Nat) (Pair Atom Nat)) (λ (p) (cons (car p) (cdr p))))
expression: output
---
type: (→ (Pair Atom Nat) (Pair Atom Nat))
expr: (λ (p) p)
